<resources>
    <string name="app_name">BangkitCapstoneProject</string>
    <string name="capture_image_button">Capture Image Button</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="search_food_text">Type Some Food…</string>
    <string name="search_text_1">Enter the name of the food</string>
    <string name="search_text_2">check if the food is healthy</string>
    <string name="back">back</string>
    <string name="search">Search</string>
    <string name="result_lorem">Lorem</string>
    <string name="contain">Ingredients :</string>
    <string name="suitable_for">Suitable For :</string>
    <string name="result_emoticon">result emoticon</string>
    <string name="title_activity_based">BasedActivity</string>
    <string name="title_home">Home</string>
    <string name="title_food_detector">Food Detector</string>
    <string name="title_profile">Profile</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="other_info">Halal • 3.0 km • $$$</string>
    <string name="btn_call">Call</string>
    <string name="btn_navigate">Navigate</string>
    <string name="btn_share">Share</string>
    <string name="devider3">|</string>
    <string name="devider2">-</string>
    <string name="result">Result :</string>
</resources>