<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.food_detector.FoodValidatorText">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:text="@string/back"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_text_1"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back" />

    <TextView
        android:id="@+id/tv_text_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_text_2"
        android:textSize="15sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_text" />

    <com.bintang.bangkitcapstoneproject.utils.CustomSearchBar
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_text_2" />

    <TextView
        android:id="@+id/search_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_lorem"
        android:textSize="25sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/search_bar"
        app:layout_constraintTop_toBottomOf="@id/search_bar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/contain"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/search_bar"
        app:layout_constraintStart_toStartOf="@id/search_bar"
        app:layout_constraintTop_toBottomOf="@id/search_result" />

    <TextView
        android:id="@+id/ingredient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/suitable_for"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/search_bar"
        app:layout_constraintStart_toStartOf="@id/search_bar"
        app:layout_constraintTop_toBottomOf="@id/ingredient" />

    <TextView
        android:id="@+id/consumer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:text="@tools:sample/lorem" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        tools:src="@tools:sample/backgrounds/scenic"
        app:layout_constraintTop_toBottomOf="@id/consumer"
        app:layout_constraintStart_toStartOf="@id/consumer"
        app:layout_constraintEnd_toEndOf="@id/consumer"
        android:contentDescription="@string/result_emoticon" />

</androidx.constraintlayout.widget.ConstraintLayout>